--- a/package.json
+++ b/package.json
@@ -1,8 +1,7 @@
 {
   "name": "monkey-type-clone",
   "version": "0.1.0",
-  "private": true,
-  "homepage": "https://sajandhakal12.github.io/monkey-type-clone/",
+  "homepage": ".",
   "dependencies": {
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
